Unit 6: part 6.7 Example 6.6.1

--- a/unit6_exercises/CMakeLists.txt
+++ b/unit6_exercises/CMakeLists.txt
@@ -131,6 +131,11 @@ add_library(subscribe_function_library
 )
 add_executable(basic_example_u6_specialization_node src/basic_example_u6_specialization.cpp)
 
+add_library(specialised_example_library
+  src/main_specialised_example.cpp
+)
+
+
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -145,6 +150,8 @@ add_executable(main_subscribe_class_node src/main_magic_subscriber_class.cpp)
 add_executable(main_subscribe_function_node src/main_magic_subscriber_function.cpp)
 add_executable(main_pcl_topic_subscriber_node src/main_pcl_topic_subscriber.cpp)
 add_executable(basic_example_u6_specialization_functions_node src/basic_example_u6_specialization_functions.cpp)
+add_executable(main_specialised_example_node src/main_specialised_example.cpp)
+
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -177,6 +184,10 @@ target_link_libraries(basic_example_u6_specialization_node
 	${catkin_LIBRARIES}
 )
 target_link_libraries(basic_example_u6_specialization_functions_node
+	${catkin_LIBRARIES}
+)
+target_link_libraries(main_specialised_example_node
+	specialised_example_library
 	${catkin_LIBRARIES}
 )
 #############
